--- a/keep/Base.lproj/Main.storyboard
+++ b/keep/Base.lproj/Main.storyboard
@@ -48,12 +48,95 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <segue destination="8eE-7h-YI0" kind="show" id="7p9-qL-gwD"/>
+                        <segue destination="SVa-GK-m6E" kind="show" id="iYm-iY-Rse"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1073.913043478261" y="6.0267857142857144"/>
+        </scene>
+        <!--Files-->
+        <scene sceneID="skr-SN-2L1">
+            <objects>
+                <viewController storyboardIdentifier="FilesVC" id="SVa-GK-m6E" customClass="FilesVC" customModule="keep" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DsZ-u0-9ZW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="52j-VP-Fqw">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xrJ-yr-VG8" customClass="AlignedCollectionViewFlowLayout" customModule="keep" customModuleProvider="target">
+                                    <size key="itemSize" width="185" height="180"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="woh-J8-if7" customClass="photocell" customModule="keep" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="185" height="180"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="PrF-Pv-Z2a">
+                                            <rect key="frame" x="0.0" y="0.0" width="185" height="180"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="picture" translatesAutoresizingMaskIntoConstraints="NO" id="6hJ-dZ-70C">
+                                                    <rect key="frame" x="20" y="20" width="145" height="140"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="140" id="J7W-Jp-XfS"/>
+                                                        <constraint firstAttribute="width" secondItem="6hJ-dZ-70C" secondAttribute="height" multiplier="1:1" id="SKn-Sa-S21"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OSt-QZ-4ir">
+                                                    <rect key="frame" x="5" y="162" width="175" height="13"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="6hJ-dZ-70C" firstAttribute="centerX" secondItem="PrF-Pv-Z2a" secondAttribute="centerX" id="4j8-Y6-Q3u"/>
+                                                <constraint firstItem="6hJ-dZ-70C" firstAttribute="centerY" secondItem="PrF-Pv-Z2a" secondAttribute="centerY" id="4k2-nJ-MO5"/>
+                                                <constraint firstItem="6hJ-dZ-70C" firstAttribute="top" secondItem="PrF-Pv-Z2a" secondAttribute="top" constant="20" symbolic="YES" id="B3Z-FO-tYR"/>
+                                                <constraint firstItem="OSt-QZ-4ir" firstAttribute="centerX" secondItem="PrF-Pv-Z2a" secondAttribute="centerX" id="Gv1-JA-SMd"/>
+                                                <constraint firstItem="OSt-QZ-4ir" firstAttribute="leading" secondItem="PrF-Pv-Z2a" secondAttribute="leading" constant="5" id="Hox-Re-oBA"/>
+                                                <constraint firstItem="OSt-QZ-4ir" firstAttribute="top" secondItem="6hJ-dZ-70C" secondAttribute="bottom" constant="2" id="Jbb-yZ-GbS"/>
+                                                <constraint firstAttribute="bottom" secondItem="OSt-QZ-4ir" secondAttribute="bottom" constant="5" id="abY-0J-mHs"/>
+                                                <constraint firstItem="6hJ-dZ-70C" firstAttribute="leading" secondItem="PrF-Pv-Z2a" secondAttribute="leading" constant="20" symbolic="YES" id="ukA-D7-TPv"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="185" height="180"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="6hJ-dZ-70C" id="pHf-9N-iQm"/>
+                                            <outlet property="title" destination="OSt-QZ-4ir" id="JDE-HB-u0Y"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="SVa-GK-m6E" id="uA0-jI-rpH"/>
+                                    <outlet property="delegate" destination="SVa-GK-m6E" id="fA9-AB-imJ"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="52j-VP-Fqw" firstAttribute="bottom" secondItem="JvY-ao-N0j" secondAttribute="bottom" id="Bwz-ot-wlW"/>
+                            <constraint firstItem="52j-VP-Fqw" firstAttribute="trailing" secondItem="JvY-ao-N0j" secondAttribute="trailing" id="Dyv-eK-r3x"/>
+                            <constraint firstItem="52j-VP-Fqw" firstAttribute="leading" secondItem="JvY-ao-N0j" secondAttribute="leading" id="W3V-i3-wBc"/>
+                            <constraint firstItem="52j-VP-Fqw" firstAttribute="top" secondItem="JvY-ao-N0j" secondAttribute="top" id="ac6-EO-SHp"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="JvY-ao-N0j"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Files" id="1TO-Jd-hdd"/>
+                    <connections>
+                        <outlet property="collectionView" destination="52j-VP-Fqw" id="77n-aa-IQ4"/>
+                        <segue destination="8eE-7h-YI0" kind="show" id="X4g-Pd-Tj2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5dy-dU-qfZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1858" y="5"/>
         </scene>
         <!--Photos-->
         <scene sceneID="cIS-Yk-0u3">
@@ -66,7 +149,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="i6i-R1-k7q">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Me5-qG-dOX">
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Me5-qG-dOX" customClass="AlignedCollectionViewFlowLayout" customModule="keep" customModuleProvider="target">
                                     <size key="itemSize" width="185" height="180"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -88,7 +171,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QNc-Pu-LES">
-                                                    <rect key="frame" x="5" y="162" width="175" height="13"/>
+                                                    <rect key="frame" x="5" y="162" width="175" height="14"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -96,7 +179,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="QNc-Pu-LES" firstAttribute="top" secondItem="Zgh-Du-POE" secondAttribute="bottom" constant="2" id="0Z1-NI-Ms1"/>
-                                                <constraint firstAttribute="bottom" secondItem="QNc-Pu-LES" secondAttribute="bottom" constant="5" id="3zf-OW-wsv"/>
+                                                <constraint firstAttribute="bottom" secondItem="QNc-Pu-LES" secondAttribute="bottom" constant="4" id="3UJ-Zd-8kS"/>
                                                 <constraint firstItem="Zgh-Du-POE" firstAttribute="centerX" secondItem="mS9-Eg-EY2" secondAttribute="centerX" id="89I-wk-2dB"/>
                                                 <constraint firstItem="QNc-Pu-LES" firstAttribute="leading" secondItem="mS9-Eg-EY2" secondAttribute="leading" constant="5" id="D0I-az-wAA"/>
                                                 <constraint firstItem="Zgh-Du-POE" firstAttribute="leading" secondItem="mS9-Eg-EY2" secondAttribute="leading" constant="20" symbolic="YES" id="JGE-En-rHj"/>
@@ -135,7 +218,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wCY-vs-NGM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1837.68115942029" y="5.3571428571428568"/>
+            <point key="canvasLocation" x="2601" y="5"/>
         </scene>
         <!--View PhotoVC-->
         <scene sceneID="f6I-x9-B7N">
@@ -145,24 +228,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lWl-aE-NJa">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lWl-aE-NJa" userLabel="image">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="lWl-aE-NJa" firstAttribute="centerX" secondItem="3Xd-iP-5PL" secondAttribute="centerX" id="5Xn-ug-cgz"/>
-                            <constraint firstItem="zQ1-Tj-5yy" firstAttribute="bottom" secondItem="lWl-aE-NJa" secondAttribute="bottom" id="9Mu-7G-kUa"/>
-                            <constraint firstItem="lWl-aE-NJa" firstAttribute="leading" secondItem="zQ1-Tj-5yy" secondAttribute="leading" id="J7P-m5-TGi"/>
-                            <constraint firstItem="lWl-aE-NJa" firstAttribute="top" secondItem="zQ1-Tj-5yy" secondAttribute="top" id="N5x-R2-YPM"/>
-                            <constraint firstItem="lWl-aE-NJa" firstAttribute="leading" secondItem="zQ1-Tj-5yy" secondAttribute="leading" id="lOr-sx-uky"/>
+                            <constraint firstItem="lWl-aE-NJa" firstAttribute="top" secondItem="zQ1-Tj-5yy" secondAttribute="top" identifier="id1" id="N5x-R2-YPM"/>
+                            <constraint firstItem="lWl-aE-NJa" firstAttribute="bottom" secondItem="zQ1-Tj-5yy" secondAttribute="bottom" identifier="id4" id="h31-oM-V7K"/>
+                            <constraint firstItem="lWl-aE-NJa" firstAttribute="centerX" secondItem="3Xd-iP-5PL" secondAttribute="centerX" identifier="id3" id="l4x-6U-gFS"/>
+                            <constraint firstItem="lWl-aE-NJa" firstAttribute="leading" secondItem="zQ1-Tj-5yy" secondAttribute="leading" identifier="id2" id="lOr-sx-uky"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="zQ1-Tj-5yy"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="J7P-m5-TGi"/>
-                            </mask>
-                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="mWC-bO-QYr">
                         <rightBarButtonItems>
@@ -184,7 +261,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7k0-QT-BH4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2641" y="5"/>
+            <point key="canvasLocation" x="3381" y="5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Yw7-1Y-ojG">
@@ -207,5 +284,6 @@
     </scenes>
     <resources>
         <image name="lightbulb" width="256" height="256"/>
+        <image name="picture" width="256" height="256"/>
     </resources>
 </document>
