--- a/keep/Base.lproj/Main.storyboard
+++ b/keep/Base.lproj/Main.storyboard
@@ -155,6 +155,49 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
+                                <view key="backgroundView" contentMode="scaleToFill" id="9Jm-jB-h91">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5bP-Tv-WAJ">
+                                            <rect key="frame" x="107" y="344.5" width="200" height="85"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No File Added" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6aV-0P-k0C">
+                                                    <rect key="frame" x="20" y="20" width="108" height="45"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="crt-Tl-O9v">
+                                                    <rect key="frame" x="136" y="20" width="44" height="45"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="44" id="Ksg-Gh-ydd"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                                    <state key="normal" title="+"/>
+                                                    <connections>
+                                                        <action selector="addAction:" destination="8eE-7h-YI0" eventType="touchUpInside" id="Xww-JP-beB"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                            <constraints>
+                                                <constraint firstItem="6aV-0P-k0C" firstAttribute="top" secondItem="5bP-Tv-WAJ" secondAttribute="top" constant="20" symbolic="YES" id="0n5-Ix-6Qd"/>
+                                                <constraint firstItem="crt-Tl-O9v" firstAttribute="top" secondItem="5bP-Tv-WAJ" secondAttribute="top" constant="20" symbolic="YES" id="1WC-IB-8K2"/>
+                                                <constraint firstAttribute="bottom" secondItem="6aV-0P-k0C" secondAttribute="bottom" constant="20" symbolic="YES" id="Jqh-5q-Bio"/>
+                                                <constraint firstItem="crt-Tl-O9v" firstAttribute="leading" secondItem="6aV-0P-k0C" secondAttribute="trailing" constant="8" symbolic="YES" id="chs-Xm-MXs"/>
+                                                <constraint firstAttribute="bottom" secondItem="crt-Tl-O9v" secondAttribute="bottom" constant="20" symbolic="YES" id="fmc-rA-z0y"/>
+                                                <constraint firstAttribute="trailing" secondItem="crt-Tl-O9v" secondAttribute="trailing" constant="20" symbolic="YES" id="hqD-8g-XO2"/>
+                                                <constraint firstItem="6aV-0P-k0C" firstAttribute="leading" secondItem="5bP-Tv-WAJ" secondAttribute="leading" constant="20" symbolic="YES" id="kfp-OH-uap"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    <constraints>
+                                        <constraint firstItem="5bP-Tv-WAJ" firstAttribute="centerX" secondItem="9Jm-jB-h91" secondAttribute="centerX" id="W8D-rt-6pR"/>
+                                        <constraint firstItem="5bP-Tv-WAJ" firstAttribute="centerY" secondItem="9Jm-jB-h91" secondAttribute="centerY" id="ZK2-WY-qy8"/>
+                                    </constraints>
+                                </view>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="CcR-5n-g61" customClass="photocell" customModule="keep" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="185" height="180"/>
@@ -213,12 +256,13 @@
                     <navigationItem key="navigationItem" title="Photos" id="QwH-5f-UNe"/>
                     <connections>
                         <outlet property="clcView" destination="i6i-R1-k7q" id="pLu-NF-yNk"/>
+                        <outlet property="placeHolderView" destination="5bP-Tv-WAJ" id="5Wx-DH-VrO"/>
                         <segue destination="pGN-mK-3zP" kind="show" id="1YD-EO-QTK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wCY-vs-NGM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2601" y="5"/>
+            <point key="canvasLocation" x="2598.5507246376815" y="4.6875"/>
         </scene>
         <!--View PhotoVC-->
         <scene sceneID="f6I-x9-B7N">
